--- a/src/components/Audio/Audio.css
+++ b/src/components/Audio/Audio.css
@@ -1,5 +1,13 @@
 #musicAudio{ width:100%; height: 65px; background:url(/images/list_audioBg.png); position: absolute; left:0; bottom: 0; display: flex; }
-#musicAudio .audioPlay{ width:40px;  height:40px; background:url(/images/list_audioPlay.png); background-size:cover; margin:10px 20px;}
-#musicAudio .audioProgress{ height:2px; background:white; position: relative; flex:1; top:31px; margin-right: 20px;}
-#musicAudio .audioBar{ width:15px; height:15px; background:#29abe2; border-radius:50%; position:absolute; left:-7px; top:-7px;  }
+#musicAudio .audioPlay{ width:40px;  height:40px; background:url(/images/list_audioPlay.png); background-size:cover; margin:10px 30px;}
+#musicAudio .audioProgress{ width:90%;height:2px; background:white; position: relative; flex:1; top:31px; margin-right: 30px;left:1px;}
+#musicAudio .audioBar{ width:15px; height:15px; background:#29abe2; border-radius:50%; position:absolute; left:-7px; top:-7px; margin-right: 10px; }
 #musicAudio .audioNow{ width:0; height:2px; background:#29abe2; position:absolute; left:0; top:0; }
+#musicAudio .icon-pre{font-size: 10px;color:white;position: absolute;left:-22px;top:-8px;opacity: .4;}
+#musicAudio .icon-bofangqixiashou{font-size: 10px;color:white;position: absolute;right:-15px;top:-9px;opacity: .4;}
+#musicAudio .icon-bofangqi_suijibofang_{font-size: 20px;color:white;position: absolute;right:30px;top:6px;opacity: .7;}
+#musicAudio .icon-xunhuanbofang{font-size: 20px;color:white;position: absolute;right:60px;top:6px;opacity: .7;}
+#musicAudio .icon-bofangqi-yinliang{font-size: 20px;color:white;position: absolute;right:90px;top:6px;opacity: .7;}
+#musicAudio .icon-bofangqi-suoping_{font-size: 20px;color:white;position: absolute;right:120px;top:6px;opacity: .7;}
+#musicAudio .ballBar{width:2px;height:100px;position: absolute;background: red;bottom: 0;right:95px;opacity:.5;display:-none;}
+#musicAudio .ball{width:10px;height:10px;opacity:.7; background: white;border-radius: 50%;position: absolute;right:-4px;bottom:0;}
