--- a/src/components/Audio/Audio1.html
+++ b/src/components/Audio/Audio1.html
@@ -15,6 +15,8 @@
             console.log(ev)
             console.log('11')
         }
+        var a=3.2222;
+        console.log(parseFloat(a).toFixed(1))
     </script>
     
 </body>
