--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
 *{ margin:0; padding:0;}
 html{ width:100%; height:100%; overflow:hidden;}
-body{ width:100%; height:100%; font: 14px/1.5 Tahoma,Arial,Roboto,"Droid Sans","Helvetica Neue","Droid Sans Fallback","Heiti SC",sans-self;}
+body{ width:100%; height:100%; color:red; font: 14px/1.5 Tahoma,Arial,Roboto,"Droid Sans","Helvetica Neue","Droid Sans Fallback","Heiti SC",sans-self;}
 li{ list-style:none;}
